--- a/FinanciCom/FinanciCom/app/src/main/res/values/strings.xml
+++ b/FinanciCom/FinanciCom/app/src/main/res/values/strings.xml
@@ -3,8 +3,10 @@
     <string name="Title">Ingrese los siguientes datos</string>
     <string name="textVarPrestamo">Valor de prestamo</string>
     <string name="textFecha">Fecha</string>
-    <string name="textCuotas">Numero de cuotas</string>
+    <string name="textNumCuotas">Numero de cuotas</string>
     <string name="textTipoPrestamo">Tipo de prestamo</string>
     <string name="calcular">Calcular</string>
     <string name="limpiar">Limpiar</string>
+    <string name="textValorDeuda">Valor Deuda</string>
+    <string name="textValorCuota">Valor Cuota</string>
 </resources>
